--- a/style.css
+++ b/style.css
@@ -14,3 +14,12 @@ body{
     min-height: 100vh;
 
 }
+
+.caixa-principal{
+    background-color: var(--cor-fundo);
+    width: 90%;
+    max-width: 600px;
+
+
+
+}
