--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-:root {
-    --cor-fundo: #f5f5f5; 
-    --cor-principal: #b01dad; 
-    --cor-secundaria: #2ecc71; 
-    --cor-destaque: #e74c3c; 
-    --cor-texto: #333333; 
+:root{
+    --cor-fundo: #01080E;
+    --cor-principal: #0b0d20;
+    --cor-secundaria: #212333;
+    --cor-destaque: #2dbefd;
+    --cor-texto: #D7F9FF;
 }
 body{
     background-color: var(--cor-fundo);
@@ -12,14 +12,20 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-
 }
-
-.caixa-principal{
-    background-color: var(--cor-fundo);
-    width: 90%;
-    max-width: 600px;
-
-
-
+button{
+    background-color: var(--cor-secundaria);
+    color: var(--cor-texto);
+    border: none;
+    border-radius: 15px;
+    padding-inline: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    transition: background-color 0.3s;
+    margin-right: 10px;
+    margin-top: 10px;
+}
+button:hover{
+    background-color: var(--cor-destaque);
+    color: var(--cor-principal);
 }
