--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
-    --cor-fundo: #01080E;
-    --cor-principal: #0b0d20;
-    --cor-secundaria: #212333;
-    --cor-destaque: #2dbefd;
+    --cor-fundo: #10002b;
+    --cor-principal: #240046;
+    --cor-secundaria: #3c096c;
+    --cor-destaque: #9d4edd;
     --cor-texto: #D7F9FF;
 }
 body{
